--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-react-views": "^0.11.0",
+    "mongoose": "^7.5.1",
     "react": "^16.14.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
-
-
